# runcorder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: positioning.md  spec.md  user.md
docs/todo/: kick-off.md
src/runcorder/: __init__.py  __main__.py  _artifact.py  _capture.py  _context.py  _display.py  _frames.py  _location.py  _report.py  _session.py  _tracker.py  cli.py  watch.py
tests/: example1.py  test_artifact.py  test_capture.py  test_cli.py  test_context.py  test_display.py  test_location.py  test_report.py  test_session.py  test_tracker.py  test_watch.py
