[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runcorder"
version = "0.5.1"
description = "Always-on flight recorder for Python scripts: live watch line while it runs, compact Markdown report when it crashes or gets stuck."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Sasha Ovsankin" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]
dependencies = [
    "cyclopts>=3",
]

[project.urls]
Homepage = "https://github.com/SashaOv/runcorder"
Source = "https://github.com/SashaOv/runcorder"
Documentation = "https://github.com/SashaOv/runcorder/blob/main/docs/user.md"

[project.scripts]
runcorder = "runcorder.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/runcorder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
